Routing project completed

--- a/shop/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/shop/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -20,9 +20,10 @@
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li (click)="onAddToShoppingList()" style="cursor:pointer;">To Shopping List</li>
-        <li href="#">Add Recipe</li>
-        <li href="#">Edit Recipe</li>
+        <li (click)="onAddToShoppingList()"
+         style="cursor:pointer;">To Shopping List</li>
+        <li  (click)="onAddRecipe()" style="cursor:pointer;">Add Recipe</li>
+        <li (click)="onEditRecipe()" style="cursor:pointer;">Edit Recipe</li>
       </ul>
     </div>
    
