--- a/routing-start/src/app/home/home.component.html
+++ b/routing-start/src/app/home/home.component.html
@@ -2,4 +2,5 @@
 <p>Manage your Servers and Users.</p>
 <button class="btn btn-primary" (click)="onLoadServer(1)">Load Server 1</button>
 
-
+<button class="btn btn-success" (click)="onLogin()">Login</button>
+<button class="btn btn-danger" (click)="onLogout()">Logout</button>
