--- a/shop/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/shop/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,13 +1,14 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class=" btn btn-success">New Recipe</button>
+    <button class=" btn btn-success" (click)="addNewRecipe()">New Recipe</button>
   </div>
 </div>
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    <app-recipe-item *ngFor="let recipeEl of recipes" 
+    <app-recipe-item *ngFor="let recipeEl of recipes; let i =index" 
     [recipe]="recipeEl"
+    [index] ="i"
     ></app-recipe-item>
   </div>
 </div>
